<resources>
    <string name="app_name">Smartbuilding</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_login">This login is incorrect</string>
    <string name="error_incorrect_username">This username is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Jednostavno upravljanje</string>
    <string name="error">Nažalost dogodila se greška, molim vas pokušajte kasnije.</string>
    <string name="error_nocrons">Ne postoji niti jedna akcija.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="kitchen">Kuhinja</string>
    <string name="living_room">Dnevna soba</string>
    <string name="bathroom">Kupaonica</string>
    <string name="bedroom">Spavaća soba</string>
    <string name="hallway">Hodnik</string>
    <string name="preference_file_key">loggedInUser</string>
    <string name="preferenceUserData">preferenceUserData</string>

    <!--stuff for advanced layout-->
    <string name="room">Prostorija</string>
    <string name="action">Akcija</string>
    <string name="action1">Upali svjetlo</string>
    <string name="action2">Ugasi svjetlo</string>
    <string name="day">Dan</string>
    <string name="time">Vrijeme</string>
    <string name="save">Spremi</string>
    <string name="current_time">Trenutno vrijeme</string>

    <string-array name="rooms_array">
        <item>Dnevna soba</item>
        <item>Kuhinja</item>
        <item>Kupaonica</item>
        <item>Spavaća soba</item>
        <item>Hodnik</item>
    </string-array>

    <string name="monday">Ponedjeljak</string>
    <string name="tuesday">Utorak</string>
    <string name="wednesday">Srijeda</string>
    <string name="thursday">Četvrtak</string>
    <string name="friday">Petak</string>
    <string name="saturday">Subota</string>
    <string name="sunday">Nedjelja</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_advanced_layout">Napredno upravljanje</string>
    <string name="title_activity_cron_list">Lista akcija</string>

    <string name="switch6">switch6</string>
</resources>
