<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SimpleLayoutActivity"
    tools:showIn="@layout/app_bar_main"
    android:id="@+id/simpleEditRelLayout">


    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/living_room"
        android:id="@+id/switch1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kitchen"
        android:id="@+id/switch2"
        android:layout_below="@+id/switch1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bathroom"
        android:id="@+id/switch3"
        android:layout_below="@+id/switch2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bedroom"
        android:id="@+id/switch4"
        android:layout_below="@+id/switch3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hallway"
        android:id="@+id/switch5"
        android:layout_below="@+id/switch4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/error"
        android:id="@+id/textViewError"
        android:layout_below="@+id/switch5"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>


</RelativeLayout>
